--- a/src/app/features/account/components/account-creation/account-creation.component.html
+++ b/src/app/features/account/components/account-creation/account-creation.component.html
@@ -1,56 +1,45 @@
 <div class="acc-creation">
-<div *ngIf="successMessage" class="success-banner">
+  <div *ngIf="successMessage" class="success-banner">
+    {{ successMessage }}
 
-  {{ successMessage }}
-
-  <div class="make-transfer">
-  <app-custom-button 
-    [label]="'Make a Transfer'" (click)="goToTransfer()">
-     
-    
-  </app-custom-button>
-  </div>
-</div>
-
-<div class="form-header">
-
-  <h2 >Create an account</h2>
-<p> Welcome! please signup for a new bank account</p>
-</div>
-
-<form [formGroup]="accountForm" (ngSubmit)="onSubmit()">
-  
- <div class="personal-info">
-  <mat-form-field appearance="outline">
-    <mat-label>Account Name</mat-label>
-    <input matInput formControlName="name" required />
-    
-  </mat-form-field>
-
-
-  <mat-form-field appearance="outline">
-    <mat-label>Initial Balance</mat-label>
-    <input matInput type="number" formControlName="balance" required />
-  </mat-form-field>
+    <div class="make-transfer">
+      <app-custom-button [label]="'Make a Transfer'" (click)="goToTransfer()">
+      </app-custom-button>
+    </div>
   </div>
 
-  <div class= "radio-sec">
-
-   <label>Select Account type</label>
-  <mat-radio-group formControlName="type">
-    <mat-radio-button value="chequing">Chequing</mat-radio-button>
-    <mat-radio-button value="savings">Savings</mat-radio-button>
-  </mat-radio-group>
-
+  <div class="form-header">
+    <h2>Create an account</h2>
+    <p>Welcome! please signup for a new bank account</p>
   </div>
 
-  <div class = "create-acc-btn">
-  <app-custom-button 
-    [label]="'Create ' + accountForm.get('type')?.value + ' account'"
-    [accountType]="accountForm.get('type')?.value">
-    
-  </app-custom-button>
+  <form [formGroup]="accountForm" (ngSubmit)="onSubmit()">
+    <div class="personal-info">
+      <mat-form-field appearance="outline">
+        <mat-label>Account Name</mat-label>
+        <input matInput formControlName="name" required />
+      </mat-form-field>
 
-  </div>
-</form>
+      <mat-form-field appearance="outline">
+        <mat-label>Initial Balance</mat-label>
+        <input matInput type="number" formControlName="balance" required />
+      </mat-form-field>
+    </div>
+
+    <div class="radio-sec">
+      <label>Select Account type</label>
+      <mat-radio-group formControlName="type">
+        <mat-radio-button value="chequing">Chequing</mat-radio-button>
+        <mat-radio-button value="savings">Savings</mat-radio-button>
+      </mat-radio-group>
+    </div>
+
+    <div class="create-acc-btn">
+      <app-custom-button
+        [label]="'Create ' + accountForm.get('type')?.value + ' account'"
+        [accountType]="accountForm.get('type')?.value"
+      >
+      </app-custom-button>
+    </div>
+  </form>
 </div>
