--- a/src/app/features/account/components/account-creation/account-creation.component.scss
+++ b/src/app/features/account/components/account-creation/account-creation.component.scss
@@ -5,50 +5,45 @@
   border-radius: 8px;
   margin-bottom: 16px;
   font-weight: bold;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
 
-.acc-creation{
-
+.acc-creation {
   padding: 50px 10px 70px 10px;
   margin: 0 auto;
-  width: 50%; 
+  width: 50%;
   justify-items: center;
   background-color: rgb(255, 255, 255);
-    border-radius: 8px;
+  border-radius: 8px;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
-
-  
 }
 
-.personal-info{
+.personal-info {
   display: flex;
   gap: 40px;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
 }
 
-.radio-sec{
-
+.radio-sec {
   padding-block: 15px 50px;
 }
 
-.create-acc-btn{
-
- text-align: center;
+.create-acc-btn {
+  text-align: center;
 }
 
-.form-header{
- text-align: center; 
- padding-bottom: 30px;
+.form-header {
+  text-align: center;
+  padding-bottom: 30px;
 }
 
-.form-header h2{
- text-align: center; 
- font-size: 30px;
- letter-spacing: 1px;
+.form-header h2 {
+  text-align: center;
+  font-size: 30px;
+  letter-spacing: 1px;
 }
 
-.make-transfer{
+.make-transfer {
   text-align: center;
   margin-top: 20px;
 }
