--- a/src/app/features/account/components/account-transfer/account-transfer.component.scss
+++ b/src/app/features/account/components/account-transfer/account-transfer.component.scss
@@ -18,3 +18,12 @@
   font-size: 30px;
   letter-spacing: 1px;
 }
+
+.account-list {
+}
+
+.account-card {
+  background-color: #ecf3ff;
+  margin-block: 1.5rem;
+  padding: 1rem;
+}
