--- a/src/app/shared/components/custom-button/custom-button.component.scss
+++ b/src/app/shared/components/custom-button/custom-button.component.scss
@@ -1,3 +1,33 @@
+.base-button {
+  padding: 0.75rem 1.3rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 1.5rem;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.9;
+  }
+}
+
+.btn-header {
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  margin-right: 15px;
+
+  &:hover {
+    background-color: #e7f7ff;
+  }
+}
+
+.btn-default {
+  font-size: 0.9rem;
+  background-color: #163155;
+  color: white;
+}
+
 .btn-chequing {
   background-color: #163155;
   color: white;
